# DeepMIR-HW2

./: .gitignore  R13921098_report.md  README.md  config_final.json  main_pipeline.py  pyproject.toml  report_methods.tex  requirements.txt  run_cfg_experiments.py
src/captioning/: audio_captioner.py  audio_flamingo_captioner.py  captioner_factory.py  qwen2_audio_captioner.py
src/evaluation/: audiobox_aesthetics.py  clap_similarity.py  melody_accuracy.py
src/extraction/: chord_extractor.py  dynamics_extractor.py  jasco_melody_extractor.py  melody_extractor.py  rhythm_extractor.py  source_separator.py
src/generation/: music_generator.py
src/retrieval/: audio_encoder.py  similarity.py
