[project]
name = "hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.34.2",
    "audioread>=3.0.0",
    "basic-pitch>=0.4.0",
    "cython>=3.1.6",
    "deepspeed>=0.18.1",
    "demucs>=4.0.1",
    "einops==0.6.1",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    "kaldiio>=2.18.1",
    "laion-clap>=1.1.0",
    "librosa>=0.10.0",
    "loguru>=0.7.3",
    "madmom>=0.16.1",
    "matplotlib>=3.7.0",
    "music21>=9.1.0",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless==4.8.0.76",
    "pandas>=2.0.0",
    "peft>=0.9.0",
    "pretty-midi>=0.2.10",
    "pydub>=0.25.0",
    "pytorchvideo>=0.1.5",
    "resampy>=0.4.2",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "sentencepiece>=0.1.99",
    "soundfile>=0.12.0",
    "torch==2.3.0",
    "torchaudio>=2.0.0",
    "torchmetrics>=1.2.0",
    "torchsde>=0.2.6",
    "torchvision==0.18.0",
    "tqdm>=4.66.0",
    "transformers==4.46.0",
    "whisper>=1.1.10",
]

